form box is in the correct spacing

--- a/style.css
+++ b/style.css
@@ -205,7 +205,10 @@ a {
 
 @media(max-width: 640px) {
 	.hero__form {
-		width: auto;
+		height: 280px;
+		margin-block: -47%;
+		margin-left: 123px;
+		width: 317px;
 	}
 }
 
@@ -233,7 +236,13 @@ a {
 	position: absolute;
 	width: 100%;
 }
-
+/*
+@media(max-width: 640px) {
+	.hero__body {
+		
+	}
+}
+*/
 .hero__body.hero__body--second {
 	padding-left: 5px;
 	opacity: 70%;
